Se agrega funcionalidad de aprobación masiva de pagos
