# swagger/swagger.json
@@ -32,6 +32,23 @@
                 }
             }
         },
+        "/aprobacion_pago/aprobar_pagos": {
+            "post": {
+                "tags": [
+                    "aprobacion_pago"
+                ],
+                "description": "create AprobarMultiplesPagos",
+                "operationId": "AprobacionPagoController.AprobarMultiplesPagos",
+                "responses": {
+                    "201": {
+                        "description": ""
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/aprobacion_pago/certificacion_documentos_aprobados/{dependencia}/{mes}/{anio}": {
             "get": {
                 "tags": [
